--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Cronoshop Banner -->
     <div class="cronoshop-banner">
-        <a href="http://cronosshop.eu" target="_blank" rel="noopener noreferrer">
+        <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
             <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
             Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
             <span class="banner-cta">VISITA ORA</span>
