--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 <body>
+    <!-- Cronoshop Banner -->
+    <div class="cronoshop-banner">
+        <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
+            <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
+            Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
+            <span class="banner-cta">VISITA ORA</span>
+        </a>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -90,9 +99,8 @@
         </div>
     </nav>
 
-    <!-- Cronoshop Banner -->
-    <div class="cronoshop-banner">
-        <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
+    
+        <a href="http://cronosshop.eu" target="_blank" rel="noopener noreferrer">
             <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
             Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
             <span class="banner-cta">VISITA ORA</span>
