--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         </div>
     </nav>
 
-    
-        <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
-            <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
-            Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
-            <span class="banner-cta">VISITA ORA</span>
-        </a>
+    <div class="cronoshop-banner">
+    <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
+        <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
+        Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
+        <span class="banner-cta">VISITA ORA</span>
+    </a>
     </div>
-
+        
     <!-- Main Content -->
     <main id="main-content">
         <!-- Content will be loaded dynamically -->
