--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 </head>
 <body>
 
+    <!-- Banner Cronoshop -->
+    <div class="cronoshop-banner">
+        <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
+            <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
+            Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
+            <span class="banner-cta">VISITA ORA</span>
+        </a>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -90,15 +99,7 @@
             </div>
         </div>
     </nav>
-    
-<div class="cronoshop-banner">
-    <a href="http://cronoshop.eu" target="_blank" rel="noopener noreferrer">
-        <strong>Cronoshop - Offerte Amazon Esclusive</strong><br>
-        Scopri le migliori offerte Amazon. Link Utili. Gruppi WhatsApp. Categorie. Contatti. Social. 💥
-        <span class="banner-cta">VISITA ORA</span>
-    </a>
-</div>
-        
+
     <!-- Main Content -->
     <main id="main-content">
         <!-- Content will be loaded dynamically -->
