--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <main id="main-content">
         <!-- Content will be loaded dynamically -->
     </main>
-
+    <script src="main.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
