--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                         <div class="comuni-grid" id="comuni-grid"></div>
                     </div>
                 </div>
-                <a href="#" class="nav-link" data-page="blog">Blog</a>
-                <a href="#" class="nav-link" data-page="chi-siamo">Chi Siamo</a>
+                <a href="blog.html" class="nav-link" data-page="blog">Blog</a>
+                <a href="chi-siamo.html" class="nav-link" data-page="chi-siamo">Chi Siamo</a>
                 <a href="#" class="nav-link" data-page="faq">FAQ</a>
                 <a href="#" class="nav-link" data-page="contatti">Contatti</a>
             </div>
