--- a/index.html
+++ b/index.html
@@ -320,14 +320,37 @@
                     </div>
                 </div>
                 <div class="nav-dropdown">
-                    <button class="nav-link dropdown-toggle">Dove Operiamo
-                        <svg class="dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="6,9 12,15 18,9"/>
-                        </svg>
-                    </button>
-                    <div class="dropdown-menu comuni-menu">
-                        <div class="comuni-grid" id="comuni-grid"></div>
-                    </div>
+    <button class="nav-link dropdown-toggle">Dove Operiamo
+        <svg class="dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polyline points="6,9 12,15 18,9"/>
+        </svg>
+    </button>
+    <div class="dropdown-menu comuni-menu">
+        <a href="catania.html" class="dropdown-item">Catania</a>
+        <a href="acireale.html" class="dropdown-item">Acireale</a>
+        <a href="giarre.html" class="dropdown-item">Giarre</a>
+        <a href="paterno.html" class="dropdown-item">Paternò</a>
+        <a href="adrano.html" class="dropdown-item">Adrano</a>
+        <a href="belpasso.html" class="dropdown-item">Belpasso</a>
+        <a href="mascalucia.html" class="dropdown-item">Mascalucia</a>
+        <a href="gravina_di_catania.html" class="dropdown-item">Gravina di Catania</a>
+        <a href="san_giovanni_la_punta.html" class="dropdown-item">San Giovanni la Punta</a>
+        <a href="tremestieri_etneo.html" class="dropdown-item">Tremestieri Etneo</a>
+        <a href="santagata_li_battiati.html" class="dropdown-item">Sant'Agata li Battiati</a>
+        <a href="valverde.html" class="dropdown-item">Valverde</a>
+        <a href="aci_catena.html" class="dropdown-item">Aci Catena</a>
+        <a href="aci_santantonio.html" class="dropdown-item">Aci Sant'Antonio</a>
+        <a href="viagrande.html" class="dropdown-item">Viagrande</a>
+        <a href="zafferana_etnea.html" class="dropdown-item">Zafferana Etnea</a>
+        <a href="nicolosi.html" class="dropdown-item">Nicolosi</a>
+        <a href="pedara.html" class="dropdown-item">Pedara</a>
+        <a href="trecastagni.html" class="dropdown-item">Trecastagni</a>
+        <a href="aci_castello.html" class="dropdown-item">Aci Castello</a>
+        <a href="san_gregorio_di_catania.html" class="dropdown-item">San Gregorio di Catania</a>
+        <a href="camporotondo_etneo.html" class="dropdown-item">Camporotondo Etneo</a>
+    </div>
+</div>
+
                 </div>
                 <a href="blog.html" class="nav-link" data-page="blog">Blog</a>
                 <a href="chi-siamo.html" class="nav-link" data-page="chi-siamo">Chi Siamo</a>
