--- a/aci_castello.html
+++ b/aci_castello.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuovo Servizio Sgomberi - Aci Castello</title>
+     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="description" content="Servizi veloci e affidabili di sgombero nella zona di Aci Castello. Chiama subito per un intervento rapido.">
 </head>
 <body>
