--- a/aci_castello.html
+++ b/aci_castello.html
@@ -1,12 +1,12 @@
 
 <!DOCTYPE html>
 <html lang="it">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuovo Servizio Sgomberi - Aci Castello</title>
-     <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Nuovo Servizio Sgomberi - Aci Castello</title>    
     <meta name="description" content="Servizi veloci e affidabili di sgombero nella zona di Aci Castello. Chiama subito per un intervento rapido.">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+      <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
