Standardizzazione Pagine Comuni e Ottimizzazione SEO

--- a/paterno.html
+++ b/paterno.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sgomberi Professionali a Aci Castello | STR Sgomberi - Servizio Gratuito in Cambio di Merce Riutilizzabile</title>
-  <meta name="description" content="Sgomberi gratuiti a Aci Castello in cambio di merce riutilizzabile. STR Sgomberi opera nel comune etneo con servizio professionale e sostenibile. Preventivo gratuito 349 750 0613. Oltre 2500 interventi nel territorio siciliano." />
-  <meta name="keywords" content="sgomberi Aci Castello, sgombero Aci Castello, sgombero gratuito Aci Castello, sgombero appartamenti Aci Castello, sgombero case Aci Castello, sgombero uffici Aci Castello, merce riutilizzabile Aci Castello, STR Sgomberi Aci Castello, trasporti Aci Castello, sgombero sostenibile Aci Castello, preventivo sgombero Aci Castello, ditte sgombero Aci Castello, sgombero rapido Aci Castello, sgombero professionale Aci Castello" />
+  <title>Sgomberi Professionali a Paternò | STR Sgomberi - Servizio Gratuito in Cambio di Merce Riutilizzabile</title>
+  <meta name="description" content="Sgomberi gratuiti a Paternò in cambio di merce riutilizzabile. STR Sgomberi opera nel comune del Simeto con servizio professionale e sostenibile. Preventivo gratuito 349 750 0613. Oltre 180 interventi completati." />
+  <meta name="keywords" content="sgomberi Paternò, sgombero Paternò, sgombero gratuito Paternò, sgombero appartamenti Paternò, sgombero case Paternò, sgombero uffici Paternò, merce riutilizzabile Paternò, STR Sgomberi Paternò, trasporti Paternò, sgombero sostenibile Paternò, preventivo sgombero Paternò, ditte sgombero Paternò, sgombero rapido Paternò, sgombero professionale Paternò, sgombero valle del Simeto" />
   
-  <meta property="og:title" content="Sgomberi Professionali a Aci Castello | STR Sgomberi" />
-  <meta property="og:description" content="Servizi di sgombero gratuito in cambio di merce riutilizzabile a Aci Castello. Preventivo gratuito e intervento rapido." />
-  <meta property="og:url" content="https://www.sgomberosicilia.it/aci_castello.html" />
+  <meta property="og:title" content="Sgomberi Professionali a Paternò | STR Sgomberi" />
+  <meta property="og:description" content="Servizi di sgombero gratuito in cambio di merce riutilizzabile a Paternò. Preventivo gratuito e intervento rapido." />
+  <meta property="og:url" content="https://www.sgomberosicilia.it/paterno.html" />
   
-  <link rel="canonical" href="https://www.sgomberosicilia.it/aci_castello.html" />
+  <link rel="canonical" href="https://www.sgomberosicilia.it/paterno.html" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -52,7 +52,7 @@
             <a href="catania.html" class="dropdown-item">Catania</a>
             <a href="acireale.html" class="dropdown-item">Acireale</a>
             <a href="giarre.html" class="dropdown-item">Giarre</a>
-            <a href="paterno.html" class="dropdown-item">Paternò</a>
+            <a href="paterno.html" class="dropdown-item active">Paternò</a>
             <a href="adrano.html" class="dropdown-item">Adrano</a>
             <a href="belpasso.html" class="dropdown-item">Belpasso</a>
             <a href="mascalucia.html" class="dropdown-item">Mascalucia</a>
@@ -68,7 +68,7 @@
             <a href="nicolosi.html" class="dropdown-item">Nicolosi</a>
             <a href="pedara.html" class="dropdown-item">Pedara</a>
             <a href="trecastagni.html" class="dropdown-item">Trecastagni</a>
-            <a href="aci_castello.html" class="dropdown-item active">Aci Castello</a>
+            <a href="aci_castello.html" class="dropdown-item">Aci Castello</a>
             <a href="san_gregorio_di_catania.html" class="dropdown-item">San Gregorio di Catania</a>
             <a href="camporotondo_etneo.html" class="dropdown-item">Camporotondo Etneo</a>
           </div>
@@ -107,59 +107,59 @@
   <main>
     <section class="hero hero-etna-improved">
       <div class="hero-content">
-        <h1>Sgomberi Professionali a Aci Castello</h1>
-        <p>Servizi di sgombero gratuito in cambio di merce riutilizzabile nel comune di Aci Castello - Territorio etneo</p>
+        <h1>Sgomberi Professionali a Paternò</h1>
+        <p>Servizi di sgombero gratuito in cambio di merce riutilizzabile nella valle del Simeto</p>
       </div>
     </section>
 
     <section class="section section-light">
       <div class="container">
-        <h2>STR Sgomberi a Aci Castello: Servizio Professionale nel Territorio Etneo</h2>
-        <p>Con oltre 150 interventi completati ad Aci Castello, siamo specializzati in sgomberi gratuiti in cambio di merce riutilizzabile. La nostra esperienza nel territorio etneo ci permette di operare efficacemente in ogni zona del comune, dal centro storico alle aree residenziali moderne.</p>
+        <h2>STR Sgomberi a Paternò: Esperti della Valle del Simeto</h2>
+        <p>Con oltre 180 interventi completati a Paternò, siamo specializzati in sgomberi gratuiti in cambio di merce riutilizzabile. La nostra esperienza nella valle del Simeto ci permette di operare efficacemente in ogni zona del comune, dal centro storico alle aree industriali.</p>
         
-        <div class="aci-castello-zones">
-          <h3>Zone di Aci Castello Servite</h3>
+        <div class="paterno-zones">
+          <h3>Zone di Paternò Servite</h3>
           <div class="zones-grid">
             <div class="zone-item">
               <h4>🏰 Centro Storico</h4>
-              <p>Castello Normanno, Via Castello, centro paese - Esperienza specifica in edifici storici</p>
+              <p>Castello Normanno, centro paese, zone storiche - Esperienza in edifici d'epoca</p>
             </div>
             <div class="zone-item">
-              <h4>🌊 Zona Costiera</h4>
-              <p>Lungomare, Acitrezza, zona portuale - Servizi completi nelle zone marine</p>
+              <h4>🏭 Zona Industriale</h4>
+              <p>Area industriale, magazzini, capannoni - Sgomberi aziendali specializzati</p>
             </div>
             <div class="zone-item">
               <h4>🏘️ Zone Residenziali</h4>
-              <p>Via Provinciale, quartieri residenziali - Sgomberi abitazioni private</p>
+              <p>Quartieri moderni, villette, condomini - Sgomberi abitazioni private</p>
             </div>
             <div class="zone-item">
-              <h4>🏪 Zona Commerciale</h4>
-              <p>Attività commerciali, uffici - Sgomberi aziendali e commerciali</p>
+              <h4>🌾 Zone Agricole</h4>
+              <p>Aziende agricole, depositi rurali, magazzini agricoli</p>
             </div>
           </div>
         </div>
 
-        <div class="aci-castello-services">
-          <h3>I Nostri Servizi a Aci Castello</h3>
+        <div class="paterno-services">
+          <h3>I Nostri Servizi a Paternò</h3>
           <ul class="services-list">
             <li><strong>Sgombero gratuito appartamenti</strong> - In cambio di merce riutilizzabile</li>
-            <li><strong>Sgombero case vacanze</strong> - Servizio specializzato per seconde case</li>
-            <li><strong>Sgombero locali commerciali</strong> - Negozi, uffici, magazzini</li>
+            <li><strong>Sgombero aziende e industrie</strong> - Magazzini, capannoni, uffici</li>
+            <li><strong>Sgombero locali commerciali</strong> - Negozi, attività commerciali</li>
             <li><strong>Sgombero cantine e soffitte</strong> - Recupero spazi inutilizzati</li>
             <li><strong>Ritiro mobili usati</strong> - Valutazione e ritiro oggetti di valore</li>
-            <li><strong>Trasporti locali</strong> - Servizi di trasporto nel territorio etneo</li>
+            <li><strong>Trasporti valle del Simeto</strong> - Servizi di trasporto specializzati</li>
           </ul>
         </div>
 
-        <div class="aci-castello-stats">
-          <h3>I Nostri Numeri a Aci Castello</h3>
+        <div class="paterno-stats">
+          <h3>I Nostri Numeri a Paternò</h3>
           <div class="stats-grid">
             <div class="stat-item">
-              <div class="stat-number">150+</div>
-              <div class="stat-label">Interventi ad Aci Castello</div>
+              <div class="stat-number">180+</div>
+              <div class="stat-label">Interventi a Paternò</div>
             </div>
             <div class="stat-item">
-              <div class="stat-number">82%</div>
+              <div class="stat-number">78%</div>
               <div class="stat-label">Sgomberi Gratuiti</div>
             </div>
             <div class="stat-item">
@@ -174,14 +174,14 @@
         </div>
 
         <section class="contact-section">
-          <h3>Contattaci per Sgombero Gratuito a Aci Castello</h3>
-          <p>Richiedi una valutazione gratuita per il tuo immobile ad Aci Castello. Sopralluogo entro 24 ore in qualsiasi zona del comune.</p>
+          <h3>Contattaci per Sgombero Gratuito a Paternò</h3>
+          <p>Richiedi una valutazione gratuita per il tuo immobile a Paternò. Sopralluogo entro 24 ore in qualsiasi zona del comune, dal centro alle aree industriali.</p>
           <div class="cta-buttons">
             <a href="tel:3497500613" class="btn btn-primary">Chiama: 349 750 0613</a>
             <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary">WhatsApp</a>
           </div>
-          <p>Email: <a href="mailto:info@sgomberi-aci_castello.it">info@sgomberi-aci_castello.it</a></p>
-          <p><a href="https://sgomberocatania.it/sgomberi-aci-castello" target="_blank" rel="noopener">Approfondisci i nostri servizi ad Aci Castello</a></p>
+          <p>Email: <a href="mailto:info@sgomberi-paterno.it">info@sgomberi-paterno.it</a></p>
+          <p><a href="https://sgomberocatania.it/sgomberi-paterno" target="_blank" rel="noopener">Approfondisci i nostri servizi a Paternò</a></p>
         </section>
       </div>
     </section>
@@ -191,8 +191,8 @@
     <div class="footer-container">
       <div class="footer-brand">
         <img src="public/OIG1-removebg-preview_1_-removebg-preview.png" alt="STR Sgomberi Logo" class="footer-logo" />
-        <h3>STR Sgomberi Aci Castello</h3>
-        <p>Sgomberi professionali nel comune di Aci Castello. Servizio gratuito in cambio di merce riutilizzabile. <a href="index.html">Torna alla Home</a> | <a href="https://sgomberocatania.it" target="_blank" rel="noopener">Maggiori informazioni</a></p>
+        <h3>STR Sgomberi Paternò</h3>
+        <p>Sgomberi professionali nella valle del Simeto a Paternò. Servizio gratuito in cambio di merce riutilizzabile. <a href="index.html">Torna alla Home</a> | <a href="https://sgomberocatania.it" target="_blank" rel="noopener">Maggiori informazioni</a></p>
       </div>
     </div>
   </footer>
