--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <p>Scopri se il tuo sgombero può essere completamente gratuito. I nostri esperti valutatori effettuano sopralluoghi senza impegno in tutta la provincia di Catania, dal centro storico alle periferie, da Acireale all'Etna.</p>
                     <div class="cta-buttons">
                         <a href="tel:3497500613" class="btn btn-primary" aria-label="Chiama STR Sgomberi Catania per preventivo gratuito">Chiama Ora: 349 750 0613</a>
-                        <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary" aria-label="Contatta STR Sgomberi Catania su WhatsApp">WhatsApp</a>
+                        <a href="https://wa.me/393497500613" target="_blank" class="btn btn-primary" aria-label="Contatta STR Sgomberi Catania su WhatsApp">WhatsApp</a>
                     </div>
                     <p><a href="https://sgomberocatania.it" target="_blank" rel="noopener">Visita il nostro sito specializzato per maggiori dettagli sui nostri metodi di lavoro</a></p>
                 </div>
