--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <span>349 750 0613</span>
                 </a>
                 <a href="https://wa.me/393497500613" target="_blank" class="whatsapp-btn" title="Chatta su WhatsApp con STR Sgomberi Catania">
-                    <svg viewBox="0 0 32 32" fill="currentColor" width="24" height="24" aria-hidden="true">
+                    <svg viewBox="0 0 32 32" fill="currentColor" width="26" height="24" aria-hidden="true">
                         <path d="M19.11 17.47c-.3-.15-1.77-.87-2.05-.97-.27-.1-.46-.15-.65.15-.19.3-.75.97-.92 1.17-.17.2-.34.22-.63.07-.3-.15-1.27-.47-2.43-1.5-.9-.8-1.5-1.78-1.67-2.08-.17-.3-.02-.46"/>
                     </svg>
                 </a>
@@ -332,7 +332,7 @@
                             <div class="testimonial-author" itemprop="author">- Francesco M., Nicolosi</div>
                         </div>
                     </div>
-                    <p><a href="https://www.google.com/maps/place/STR+Sgomberi+Catania" target="_blank" rel="noopener">Leggi altre recensioni su Google</a></p>
+                    <p><a href="https://g.co/kgs/rkNqx4f" target="_blank" rel="noopener">Leggi altre recensioni su Google</a></p>
                 </section>
 
                 <!-- FAQ Snippet for SEO -->
