--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="cta-buttons">
                     <a href="tel:3497500613" class="btn btn-primary" aria-label="Chiama STR Sgomberi Catania per sgombero gratuito">Chiama: 349 750 0613</a>
                     <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary" aria-label="Scrivi su WhatsApp a STR Sgomberi Catania">WhatsApp</a>
-                    <a href="sgomberocatania.it/servizio-di-sgombero" target="_blank" class="btn btn-secondary" aria-label="Visita il Serivizio Completo">Servizio Di Sgombero Gratis</a>
+                    <a href="https://www.sgomberocatania.it/servizio-di-sgombero" target="_blank" class="btn btn-secondary" aria-label="Visita il Serivizio Completo">Servizio Di Sgombero Gratis</a>
                 </div>
                 <ul class="hero-list">
                     <li>✔️ Sgombero gratuito di appartamenti, uffici, cantine, magazzini</li>
