--- a/sgombero-gratuito-catania.html
+++ b/sgombero-gratuito-catania.html
@@ -48,6 +48,250 @@
             --font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
+         /* Navigation - OTTIMIZZATA */
+.navbar {
+  background-color: var(--bg-primary);
+  border-bottom: 1px solid var(--border-light);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  transition: background-color var(--transition-normal), border-color var(--transition-normal);
+}
+
+.nav-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 var(--space-4);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 64px;
+}
+
+.nav-brand {
+  display: flex;
+  align-items: center;
+  gap: var(--space-2);
+}
+
+.nav-logo {
+  height: 32px;
+  width: auto;
+}
+
+.nav-title {
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: var(--text-primary);
+}
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+  gap: var(--space-4);
+}
+
+.nav-link {
+  color: var(--text-secondary);
+  font-weight: 500;
+  padding: var(--space-2) var(--space-3);
+  border-radius: 6px;
+  transition: all var(--transition-fast);
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: var(--space-1);
+  font-size: 0.875rem;
+}
+
+.nav-link:hover,
+.nav-link.active {
+  color: var(--primary-color);
+  background-color: var(--bg-tertiary);
+}
+
+.nav-dropdown {
+  position: relative;
+}
+
+.dropdown-toggle {
+  display: flex;
+  align-items: center;
+  gap: var(--space-1);
+}
+
+.dropdown-icon {
+  width: 14px;
+  height: 14px;
+  transition: transform var(--transition-fast);
+}
+
+.nav-dropdown:hover .dropdown-icon {
+  transform: rotate(180deg);
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--bg-primary);
+  border: 1px solid var(--border-light);
+  border-radius: 8px;
+  box-shadow: var(--shadow-lg);
+  padding: var(--space-2);
+  min-width: 200px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-8px);
+  transition: all var(--transition-fast);
+  z-index: 1001;
+}
+
+.nav-dropdown:hover .dropdown-menu {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.dropdown-item {
+  display: block;
+  padding: var(--space-2) var(--space-3);
+  color: var(--text-secondary);
+  border-radius: 6px;
+  transition: all var(--transition-fast);
+  white-space: nowrap;
+  font-size: 0.875rem;
+}
+
+.dropdown-item:hover,
+.dropdown-item.active {
+  color: var(--primary-color);
+  background-color: var(--bg-tertiary);
+}
+
+.comuni-menu {
+  min-width: 250px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+/* Navigation Actions - COMPATTA */
+.nav-actions {
+  display: flex;
+  align-items: center;
+  gap: var(--space-2);
+}
+
+.dark-mode-toggle {
+  background: none;
+  border: 1px solid var(--border-medium);
+  border-radius: 6px;
+  padding: var(--space-2);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  transition: all var(--transition-fast);
+  color: var(--text-secondary);
+}
+
+.dark-mode-toggle:hover {
+  background-color: var(--bg-tertiary);
+  border-color: var(--border-dark);
+}
+
+.dark-mode-toggle svg {
+  width: 16px;
+  height: 16px;
+}
+
+.dark-mode-toggle .moon-icon {
+  display: none;
+}
+
+body.dark-mode .dark-mode-toggle .sun-icon {
+  display: none;
+}
+
+body.dark-mode .dark-mode-toggle .moon-icon {
+  display: block;
+}
+
+.phone-btn,
+.whatsapp-btn {
+  display: flex;
+  align-items: center;
+  gap: var(--space-2);
+  padding: var(--space-2) var(--space-3);
+  border-radius: 6px;
+  font-weight: 500;
+  transition: all var(--transition-fast);
+  font-size: 0.875rem;
+  height: 36px;
+}
+
+.phone-btn {
+  background-color: var(--primary-color);
+  color: var(--white);
+}
+
+.phone-btn:hover {
+  background-color: var(--primary-hover);
+  color: var(--white);
+}
+
+.whatsapp-btn {
+  background-color: #25d366;
+  color: var(--white);
+}
+
+.whatsapp-btn:hover {
+  background-color: #20ba5a;
+  color: var(--white);
+}
+
+.phone-btn svg,
+.whatsapp-btn svg {
+  width: 16px;
+  height: 16px;
+}
+
+/* Mobile Menu - FIXED */
+.mobile-menu-btn {
+  display: none;
+  flex-direction: column;
+  gap: 3px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: var(--space-2);
+  z-index: 1002;
+}
+
+.mobile-menu-btn span {
+  width: 20px;
+  height: 2px;
+  background-color: var(--text-primary);
+  transition: all var(--transition-fast);
+  transform-origin: center;
+}
+
+.mobile-menu-btn.active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.mobile-menu-btn.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.mobile-menu-btn.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -6px);
+}
+
         /* RESET E STILI DI BASE */
         *, *::before, *::after {
             box-sizing: border-box;
@@ -610,7 +854,84 @@
     </style>
 </head>
 <body>
+    <nav class="navbar">
+    <div class="nav-container">
+      <div class="nav-brand">
+        <img src="public/OIG1-removebg-preview_1_-removebg-preview.png" alt="STR Sgomberi Logo" class="nav-logo" />
+        <span class="nav-title">STR Sgomberi</span>
+      </div>
 
+      <button class="mobile-menu-btn" id="mobile-menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
+      <div class="nav-menu" id="nav-menu">
+        <a href="index.html" class="nav-link">Home</a>
+        <div class="nav-dropdown">
+          <button class="nav-link dropdown-toggle">Servizi
+            <svg class="dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <polyline points="6,9 12,15 18,9" />
+            </svg>
+          </button>
+          <div class="dropdown-menu">
+            <a href="sgombero-gratuito-catania.html" class="dropdown-item">Sgombero Gratuito</a>
+            <a href="trasporti-catania.html" class="dropdown-item">Trasporti</a>
+          </div>
+        </div>
+        <div class="nav-dropdown">
+          <button class="nav-link dropdown-toggle">Dove Operiamo
+            <svg class="dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <polyline points="6,9 12,15 18,9" />
+            </svg>
+          </button>
+          <div class="dropdown-menu comuni-menu">
+            <a href="catania.html" class="dropdown-item">Catania</a>
+            <a href="acireale.html" class="dropdown-item">Acireale</a>
+            <a href="giarre.html" class="dropdown-item">Giarre</a>
+            <a href="paterno.html" class="dropdown-item">Paternò</a>
+            <a href="adrano.html" class="dropdown-item">Adrano</a>
+            <a href="belpasso.html" class="dropdown-item">Belpasso</a>
+            <a href="mascalucia.html" class="dropdown-item">Mascalucia</a>
+            <a href="gravina_di_catania.html" class="dropdown-item">Gravina di Catania</a>
+            <a href="san_giovanni_la_punta.html" class="dropdown-item">San Giovanni la Punta</a>
+            <a href="tremestieri_etneo.html" class="dropdown-item">Tremestieri Etneo</a>
+            <a href="santagata_li_battiati.html" class="dropdown-item">Sant'Agata li Battiati</a>
+            <a href="valverde.html" class="dropdown-item">Valverde</a>
+            <a href="aci_catena.html" class="dropdown-item active">Aci Catena</a>
+            <a href="aci_santantonio.html" class="dropdown-item">Aci Sant'Antonio</a>
+            <a href="viagrande.html" class="dropdown-item">Viagrande</a>
+            <a href="zafferana_etnea.html" class="dropdown-item">Zafferana Etnea</a>
+            <a href="nicolosi.html" class="dropdown-item">Nicolosi</a>
+            <a href="pedara.html" class="dropdown-item">Pedara</a>
+            <a href="trecastagni.html" class="dropdown-item">Trecastagni</a>
+            <a href="aci_castello.html" class="dropdown-item">Aci Castello</a>
+            <a href="san_gregorio_di_catania.html" class="dropdown-item">San Gregorio di Catania</a>
+            <a href="camporotondo_etneo.html" class="dropdown-item">Camporotondo Etneo</a>
+          </div>
+        </div>
+        <a href="blog.html" class="nav-link">Blog</a>
+        <a href="chi-siamo.html" class="nav-link">Chi Siamo</a>
+        <a href="faq.html" class="nav-link">FAQ</a>
+        <a href="contatti.html" class="nav-link">Contatti</a>
+      </div>
+
+      <div class="nav-actions">
+        <a href="tel:3497500613" class="phone-btn">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+          </svg>
+          <span>349 750 0613</span>
+        </a>
+        <a href="https://wa.me/393497500613" target="_blank" class="whatsapp-btn">
+          <svg viewBox="0 0 32 32" fill="currentColor" width="24" height="24">
+            <path d="M19.11 17.47c-.3-.15-1.77-.87-2.05-.97-.27-.1-.46-.15-.65.15-.19.3-.75.97-.92 1.17-.17.2-.34.22-.63.07-.3-.15-1.27-.47-2.43-1.5-.9-.8-1.5-1.78-1.67-2.08-.17-.3-.02-.46.13-.61.13-.13.3-.34.45-.5.15-.17.2-.3.3-.5.1-.2.05-.37 0-.52-.07-.15-.65-1.55-.9-2.13-.24-.58-.48-.5-.65-.5h-.56c-.2 0-.52.07-.8.37s-1.05 1.02-1.05 2.5 1.07 2.9 1.22 3.1c.15.2 2.1 3.2 5.1 4.48.71.31 1.26.5 1.7.63.71.23 1.36.2 1.87.13.57-.08 1.77-.72 2.02-1.42.25-.7.25-1.3.17-1.42-.07-.13-.27-.2-.57-.35zM16 3a13 13 0 0 0-11.34 19.43L3 29l6.75-1.77A13 13 0 1 0 16 3zm0 23.4c-1.96 0-3.79-.57-5.33-1.55l-.38-.24-4.01 1.05 1.07-3.91-.25-.4a10.42 10.42 0 1 1 8.9 4.05z" />
+          </svg>
+        </a>
+      </div>
+    </div>
+  </nav>
     <main class="page-container">
 
         <section id="hero" class="animate-on-scroll">
