--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sgombero Sicilia Orientale - Design Rinnovato</title>
+    <title>Sgombero Sicilia Orientale - Design Rinnovato iOS</title>
     <meta name="description" content="Sgomberi professionali in Sicilia Orientale con un design innovativo e moderno. Servizi per Catania, Siracusa, Ragusa e Messina.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,6 +47,22 @@
                         <a href="paterno.html" class="dropdown-item">Paternò</a>
                         <a href="adrano.html" class="dropdown-item">Adrano</a>
                         <a href="belpasso.html" class="dropdown-item">Belpasso</a>
+                        <a href="mascalucia.html" class="dropdown-item">Mascalucia</a>
+                        <a href="gravina_di_catania.html" class="dropdown-item">Gravina di Catania</a>
+                        <a href="san_giovanni_la_punta.html" class="dropdown-item">San Giovanni la Punta</a>
+                        <a href="tremestieri_etneo.html" class="dropdown-item">Tremestieri Etneo</a>
+                        <a href="santagata_li_battiati.html" class="dropdown-item">Sant'Agata li Battiati</a>
+                        <a href="valverde.html" class="dropdown-item">Valverde</a>
+                        <a href="aci_catena.html" class="dropdown-item">Aci Catena</a>
+                        <a href="aci_santantonio.html" class="dropdown-item">Aci Sant'Antonio</a>
+                        <a href="viagrande.html" class="dropdown-item">Viagrande</a>
+                        <a href="zafferana_etnea.html" class="dropdown-item">Zafferana Etnea</a>
+                        <a href="nicolosi.html" class="dropdown-item">Nicolosi</a>
+                        <a href="pedara.html" class="dropdown-item">Pedara</a>
+                        <a href="trecastagni.html" class="dropdown-item">Trecastagni</a>
+                        <a href="aci_castello.html" class="dropdown-item">Aci Castello</a>
+                        <a href="san_gregorio_di_catania.html" class="dropdown-item">San Gregorio di Catania</a>
+                        <a href="camporotondo_etneo.html" class="dropdown-item">Camporotondo Etneo</a>
                     </div>
                 </div>
                 <a href="blog.html" class="nav-link">Blog</a>
@@ -73,7 +89,38 @@
         </div>
     </nav>
 
-    <div class="mobile-menu-overlay glass-ui"></div>
+    <div class="mobile-menu-overlay" id="mobile-menu-overlay-bg">
+        <div class="mobile-menu-panel glass-ui" id="mobile-menu-panel">
+            <div class="mobile-menu-quick-actions">
+                <a href="index.html" class="quick-action-item">
+                    <span class="action-emoji">🏠</span>
+                    <span class="action-text">Home</span>
+                </a>
+                <a href="sgombero-gratuito-catania.html" class="quick-action-item">
+                    <span class="action-emoji">🆓</span>
+                    <span class="action-text">Gratuito</span>
+                </a>
+                <a href="trasporti-catania.html" class="quick-action-item">
+                    <span class="action-emoji">🚚</span>
+                    <span class="action-text">Trasporti</span>
+                </a>
+                 <a href="contatti.html" class="quick-action-item">
+                    <span class="action-emoji">💬</span>
+                    <span class="action-text">Contatti</span>
+                </a>
+            </div>
+            <div class="mobile-menu-links">
+                <a href="sgombero-gratuito-catania.html" class="mobile-menu-item">Sgombero Gratuito</a>
+                <a href="trasporti-catania.html" class="mobile-menu-item">Trasporti</a>
+                <a href="ritiro-mobili-usati-catania.html" class="mobile-menu-item">Ritiro Mobili Usati</a>
+                <a href="smaltimento-catania.html" class="mobile-menu-item">Smaltimento Responsabile</a>
+                <hr class="menu-divider">
+                <a href="blog.html" class="mobile-menu-item">Blog</a>
+                <a href="chi-siamo.html" class="mobile-menu-item">Chi Siamo</a>
+                <a href="tel:3497500613" class="mobile-menu-item mobile-call-action">📞 Chiama Ora</a>
+            </div>
+        </div>
+    </div>
 
     <main>
         <section class="hero">
