--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
                         <a href="sgombero-gratuito-catania.html" class="dropdown-item">Sgombero Gratuito</a>
                         <a href="trasporti-catania.html" class="dropdown-item">Trasporti</a>
                         <a href="ritiro-mobili-usati-catania.html" class="dropdown-item">Ritiro Mobili Usati</a>
-                        <a href="smaltimento-catania.html" class="dropdown-item">Smaltimento Responsabile</a>
                     </div>
                 </div>
                 <div class="nav-dropdown">
-                    <button class="nav-link dropdown-toggle">Dove Operiamo</button>
+                    <button class="nav-link dropdown-toggle" id="desktop-dove-operiamo">Dove Operiamo</button>
                     <div class="dropdown-menu comuni-menu glass-ui">
                         <a href="catania.html" class="dropdown-item">Catania</a>
                         <a href="acireale.html" class="dropdown-item">Acireale</a>
@@ -51,7 +50,7 @@
                         <a href="gravina_di_catania.html" class="dropdown-item">Gravina di Catania</a>
                         <a href="san_giovanni_la_punta.html" class="dropdown-item">San Giovanni la Punta</a>
                         <a href="tremestieri_etneo.html" class="dropdown-item">Tremestieri Etneo</a>
-                        <a href="santagata_li_battiati.html" class="dropdown-item">Sant'Agata li Battiati</a>
+                         <a href="santagata_li_battiati.html" class="dropdown-item">Sant'Agata li Battiati</a>
                         <a href="valverde.html" class="dropdown-item">Valverde</a>
                         <a href="aci_catena.html" class="dropdown-item">Aci Catena</a>
                         <a href="aci_santantonio.html" class="dropdown-item">Aci Sant'Antonio</a>
@@ -90,34 +89,53 @@
     </nav>
 
     <div class="mobile-menu-overlay" id="mobile-menu-overlay-bg">
-        <div class="mobile-menu-panel glass-ui" id="mobile-menu-panel">
-            <div class="mobile-menu-quick-actions">
-                <a href="index.html" class="quick-action-item">
-                    <span class="action-emoji">🏠</span>
-                    <span class="action-text">Home</span>
-                </a>
-                <a href="sgombero-gratuito-catania.html" class="quick-action-item">
-                    <span class="action-emoji">🆓</span>
-                    <span class="action-text">Gratuito</span>
-                </a>
-                <a href="trasporti-catania.html" class="quick-action-item">
-                    <span class="action-emoji">🚚</span>
-                    <span class="action-text">Trasporti</span>
-                </a>
-                 <a href="contatti.html" class="quick-action-item">
-                    <span class="action-emoji">💬</span>
-                    <span class="action-text">Contatti</span>
-                </a>
+        <div class="mobile-menu-wrapper">
+            <div class="mobile-menu-panel glass-ui" id="mobile-menu-main">
+                <div class="mobile-menu-quick-actions">
+                    <a href="index.html" class="quick-action-item"><span class="action-emoji">🏠</span><span class="action-text">Home</span></a>
+                    <a href="sgombero-gratuito-catania.html" class="quick-action-item"><span class="action-emoji">🆓</span><span class="action-text">Gratuito</span></a>
+                    <a href="trasporti-catania.html" class="quick-action-item"><span class="action-emoji">🚚</span><span class="action-text">Trasporti</span></a>
+                    <a href="contatti.html" class="quick-action-item"><span class="action-emoji">💬</span><span class="action-text">Contatti</span></a>
+                </div>
+                <div class="mobile-menu-links">
+                    <a href="sgombero-gratuito-catania.html" class="mobile-menu-item">Sgombero Gratuito</a>
+                    <a href="trasporti-catania.html" class="mobile-menu-item">Trasporti</a>
+                    <button class="mobile-menu-item" id="open-comuni-menu">Dove Operiamo &rarr;</button>
+                    <hr class="menu-divider">
+                    <a href="blog.html" class="mobile-menu-item">Blog</a>
+                    <a href="chi-siamo.html" class="mobile-menu-item">Chi Siamo</a>
+                    <a href="tel:3497500613" class="mobile-menu-item mobile-call-action">📞 Chiama Ora</a>
+                </div>
             </div>
-            <div class="mobile-menu-links">
-                <a href="sgombero-gratuito-catania.html" class="mobile-menu-item">Sgombero Gratuito</a>
-                <a href="trasporti-catania.html" class="mobile-menu-item">Trasporti</a>
-                <a href="ritiro-mobili-usati-catania.html" class="mobile-menu-item">Ritiro Mobili Usati</a>
-                <a href="smaltimento-catania.html" class="mobile-menu-item">Smaltimento Responsabile</a>
-                <hr class="menu-divider">
-                <a href="blog.html" class="mobile-menu-item">Blog</a>
-                <a href="chi-siamo.html" class="mobile-menu-item">Chi Siamo</a>
-                <a href="tel:3497500613" class="mobile-menu-item mobile-call-action">📞 Chiama Ora</a>
+            <div class="mobile-menu-panel glass-ui" id="mobile-menu-comuni">
+                <div class="mobile-menu-header">
+                    <button class="back-btn" id="back-to-main-menu">&larr; Indietro</button>
+                    <h4>Dove Operiamo</h4>
+                </div>
+                <div class="mobile-menu-links scrollable">
+                     <a href="catania.html" class="mobile-menu-item">Catania</a>
+                    <a href="acireale.html" class="mobile-menu-item">Acireale</a>
+                    <a href="giarre.html" class="mobile-menu-item">Giarre</a>
+                    <a href="paterno.html" class="mobile-menu-item">Paternò</a>
+                    <a href="adrano.html" class="mobile-menu-item">Adrano</a>
+                    <a href="belpasso.html" class="mobile-menu-item">Belpasso</a>
+                    <a href="mascalucia.html" class="mobile-menu-item">Mascalucia</a>
+                    <a href="gravina_di_catania.html" class="mobile-menu-item">Gravina di Catania</a>
+                    <a href="san_giovanni_la_punta.html" class="mobile-menu-item">San Giovanni la Punta</a>
+                    <a href="tremestieri_etneo.html" class="mobile-menu-item">Tremestieri Etneo</a>
+                    <a href="santagata_li_battiati.html" class="mobile-menu-item">Sant'Agata li Battiati</a>
+                    <a href="valverde.html" class="mobile-menu-item">Valverde</a>
+                    <a href="aci_catena.html" class="mobile-menu-item">Aci Catena</a>
+                    <a href="aci_santantonio.html" class="mobile-menu-item">Aci Sant'Antonio</a>
+                    <a href="viagrande.html" class="mobile-menu-item">Viagrande</a>
+                    <a href="zafferana_etnea.html" class="mobile-menu-item">Zafferana Etnea</a>
+                    <a href="nicolosi.html" class="mobile-menu-item">Nicolosi</a>
+                    <a href="pedara.html" class="mobile-menu-item">Pedara</a>
+                    <a href="trecastagni.html" class="mobile-menu-item">Trecastagni</a>
+                    <a href="aci_castello.html" class="mobile-menu-item">Aci Castello</a>
+                    <a href="san_gregorio_di_catania.html" class="mobile-menu-item">San Gregorio di Catania</a>
+                    <a href="camporotondo_etneo.html" class="mobile-menu-item">Camporotondo Etneo</a>
+                </div>
             </div>
         </div>
     </div>
@@ -130,22 +148,6 @@
                 <div class="cta-buttons">
                     <a href="tel:3497500613" class="btn btn-primary glass-ui">Chiama Ora</a>
                     <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary glass-ui">WhatsApp</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="section carousel-section">
-            <div class="container">
-                <div class="carousel-container">
-                    <div class="carousel-track">
-                        <div class="carousel-slide"><img src="public/FB_IMG_1751329946558.jpg" alt="Sgombero garage Catania"></div>
-                        <div class="carousel-slide"><img src="public/FB_IMG_1751329950718.jpg" alt="Trasloco Adrano"></div>
-                        <div class="carousel-slide"><img src="public/FB_IMG_1751329954415.jpg" alt="Sgombero cantina Nicolosi"></div>
-                        <div class="carousel-slide"><img src="public/FB_IMG_1751329960789.jpg" alt="Ritiro mobili Mascalucia"></div>
-                        <div class="carousel-slide"><img src="public/IMG-20250619-WA0015.jpg" alt="Trasloco familiare Catania"></div>
-                    </div>
-                    <button class="carousel-btn prev glass-ui">‹</button>
-                    <button class="carousel-btn next glass-ui">›</button>
                 </div>
             </div>
         </section>
@@ -227,15 +229,6 @@
         </div>
     </footer>
     
-    <div id="cronoshop-small-popup" class="cronoshop-popup glass-ui">
-        <button class="popup-close" id="small-popup-close">&times;</button>
-        <div class="popup-text">
-            <strong>Cronoshop</strong>
-            <small>Offerte e Occasioni</small>
-        </div>
-        <a href="https://cronoshop.eu" target="_blank" class="btn btn-primary">Visita</a>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
